fix flexbox on safari

--- a/aliemu/styles/collections/aliemu/layout.styl
+++ b/aliemu/styles/collections/aliemu/layout.styl
@@ -12,7 +12,7 @@ html, body
 
 #main-content
     margin-top: $block-margin
-    flex: auto
+    flex: 1
     display: flex
     height: 100%
     position: relative
